added message & sidebbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="main_section">
+    <div class="main_section">
         <!-- icon menu -->
         <section class="icon">
             <div class="menubar">
@@ -94,49 +94,97 @@
             </div>
         </section>
         <!--content section -->
-        <section class="content">
-            <form class="header_search" action="">
-                <div class="icons">
-                    <button class="btn">
-                        <img src="./images/search (1).png" alt="Search" class="btn-icon btn-icon-alt">
+        <section class="content_total">
+            <div class="content">
+                <form class="header_search" action="">
+                    <div class="icons">
+                        <button class="btn">
+                            <img src="./images/search (1).png" alt="Search" class="btn-icon btn-icon-alt">
+                        </button>
+                        <input type="search" class="header-search-input" placeholder="Search in mail">
+                    </div>
+                    <div class="icons">
+                        <button class="btn">
+                            <img src="./images/filter.png" alt="">
+                        </button>
+                    </div>
+                </form>
+                <div class="header_active">
+                    <button>
+                        <img src="./images/active.png" alt="">
+                        <h4>Active</h4>
+                        <img src="./images/down-arrow.png" alt="">
                     </button>
-                    <input type="search" class="header-search-input" placeholder="Search in mail">
                 </div>
-                <div class="icons">
-                    <button class="btn">
-                        <img src="./images/filter.png" alt="">
+                <div class="profile_side">
+                    <button>
+                        <img src="./images/question.png" alt="">
+                    </button>
+                    <button>
+                        <img src="./images/setting.png" alt="">
+                    </button>
+                    <button>
+                        <img src="./images/9_bar.png" alt="">
+                    </button>
+                    <button>
+                        <img src="./images/my_photo.png" alt="">
                     </button>
                 </div>
-            </form>
-            <div class="header_active">
-                <button>
-                    <img src="./images/active.png" alt="">
-                    <h4>Active</h4>
-                    <img src="./images/down-arrow.png" alt="">
-                </button>
             </div>
-            <div class="profile_side">
-                <button>
-                    <img src="./images/question.png" alt="">
-                </button>
-                <button>
-                    <img src="./images/setting.png" alt="">
-                </button>
-                <button>
-                    <img src="./images/9_bar.png" alt="">
-                </button>
-                <button>
-                    <img src="./images/my_photo.png" alt="">
-                </button>
+
+            <!-- message -->
+            <div class="message">
+                <div class="main_message">
+                    <div class="message_nav">
+                        <div class="left">
+                            <button class="dual_img">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/down-arrow.png" alt="">
+                            </button>
+                            <button>
+                                <img src="./images/rotate.png" alt="">
+                            </button>
+                            <button>
+                                <img src="./images/3_dot.png" alt="">
+                            </button>
+                        </div>
+                        <div class="right">
+                            <p>1-50 of 1500</p>
+                            <button>
+                                <img src="./images/left-arrow.png" alt="">
+                            </button>
+                            <button>
+                                <img src="./images/right-arrow-angle.png" alt="">
+                            </button>
+                            <button class="dual_img">
+                                <img class="wide_img" src="./images/pipe.png" alt="">
+                                <img src="./images/down-arrow.png" alt="">
+                            </button>
+                            <button class="dual_img">
+                                <img class="wide_img" src="./images/keyboard.png" alt="">
+                                <img src="./images/down-arrow.png" alt="">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="message_menu"></div>
+                    <div class="message_items"></div>
+                </div>
+                <div class="sidebar">
+                    <img src="./images/visualization.png" alt="">
+                    <img src="./images/google-calendar.png" alt="">
+                    <img src="./images/lightbulb.png" alt="">
+                    <img src="./images/task.png" alt="">
+                    <img src="./images/google-contacts.png" alt="">
+                </div>
             </div>
 
 
         </section>
-        <!-- aside  -->
-        <aside class="aside">
 
-        </aside>
-    </section>
+
+
+    </div>
+
 </body>
 
 </html>
