--- a/index.html
+++ b/index.html
@@ -141,23 +141,25 @@
                                 <img src="./images/unchecked.png" alt="">
                                 <img src="./images/down-arrow.png" alt="">
                             </button>
-                            <button>
+                            <button class="single_img">
                                 <img src="./images/rotate.png" alt="">
                             </button>
-                            <button>
+                            <button class="single_img">
                                 <img src="./images/3_dot.png" alt="">
                             </button>
                         </div>
                         <div class="right">
-                            <p>1-50 of 1500</p>
                             <button>
+                                <p class="para">1-50 of 1500</p>
+                            </button>
+                            <button class="single_img">
                                 <img src="./images/left-arrow.png" alt="">
                             </button>
-                            <button>
+                            <button class="single_img">
                                 <img src="./images/right-arrow-angle.png" alt="">
                             </button>
                             <button class="dual_img">
-                                <img class="wide_img" src="./images/pipe.png" alt="">
+                                <img class="wide_img" src="./images/split.png" alt="">
                                 <img src="./images/down-arrow.png" alt="">
                             </button>
                             <button class="dual_img">
@@ -166,7 +168,20 @@
                             </button>
                         </div>
                     </div>
-                    <div class="message_menu"></div>
+                    <div class="message_menu">
+                        <div>
+                            <img src="./images/gallery.png" alt="">
+                            <h4>Primary</h4>
+                        </div>
+                        <div>
+                            <img src="./images/promotion.png" alt="">
+                            <h4>Promotions</h4>
+                        </div>
+                        <div>
+                            <img src="./images/people.png" alt="">
+                            <h4>Social</h4>
+                        </div>
+                    </div>
                     <div class="message_items"></div>
                 </div>
                 <div class="sidebar">
@@ -175,16 +190,11 @@
                     <img src="./images/lightbulb.png" alt="">
                     <img src="./images/task.png" alt="">
                     <img src="./images/google-contacts.png" alt="">
+                    <br><br>
+                    <img src="./images/plus.png" alt="">
                 </div>
             </div>
-
-
         </section>
-
-
-
     </div>
-
 </body>
-
 </html>
