--- a/index.html
+++ b/index.html
@@ -182,7 +182,42 @@
                             <h4>Social</h4>
                         </div>
                     </div>
-                    <div class="message_items"></div>
+                    <!-- message items -->
+
+                    <div class="message_items">
+                        <div class="left">
+                            <div class="icons">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/star.png" alt="">
+                                <p>LinkedIn</p>
+                            </div>
+                            <div class="icons">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="icons">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/star.png" alt="">
+                                <p>ICC.tv</p>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <div>
+                                <p>Learn with Sumit - LWS recently posted</p>
+                                <p>9:38 PM</p>
+                            </div>
+                            <div>
+                                <p>Did you just change your password?</p>
+                                <p>11:45 AM</p>
+                            </div>
+                            <div>
+                                <p>The Final of the ICC U19 Men's Cricket World Cup is here! LIVE and FREE</p>
+                                <p>2:21 PM</p>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
                 <div class="sidebar">
                     <img src="./images/visualization.png" alt="">
@@ -197,4 +232,5 @@
         </section>
     </div>
 </body>
+
 </html>
