--- a/index.html
+++ b/index.html
@@ -201,6 +201,37 @@
                                 <img src="./images/star.png" alt="">
                                 <p>ICC.tv</p>
                             </div>
+                            <div class="icons">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/star.png" alt="">
+                                <p>LinkedIn</p>
+                            </div>
+                            <div class="icons">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="icons">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/star.png" alt="">
+                                <p>ICC.tv</p>
+                            </div>
+                            <div class="icons">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/star.png" alt="">
+                                <p>LinkedIn</p>
+                            </div>
+                            <div class="icons">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="icons">
+                                <img src="./images/unchecked.png" alt="">
+                                <img src="./images/star.png" alt="">
+                                <p>ICC.tv</p>
+                            </div>
+                            
                         </div>
                         <div class="right">
                             <div>
@@ -215,6 +246,31 @@
                                 <p>The Final of the ICC U19 Men's Cricket World Cup is here! LIVE and FREE</p>
                                 <p>2:21 PM</p>
                             </div>
+                            <div>
+                                <p>Learn with Sumit - LWS recently posted</p>
+                                <p>9:38 PM</p>
+                            </div>
+                            <div>
+                                <p>Did you just change your password?</p>
+                                <p>11:45 AM</p>
+                            </div>
+                            <div>
+                                <p>The Final of the ICC U19 Men's Cricket World Cup is here! LIVE and FREE</p>
+                                <p>2:21 PM</p>
+                            </div>
+                            <div>
+                                <p>Learn with Sumit - LWS recently posted</p>
+                                <p>9:38 PM</p>
+                            </div>
+                            <div>
+                                <p>Did you just change your password?</p>
+                                <p>11:45 AM</p>
+                            </div>
+                            <div>
+                                <p>The Final of the ICC U19 Men's Cricket World Cup is here! LIVE and FREE</p>
+                                <p>2:21 PM</p>
+                            </div>
+                            
                         </div>
 
                     </div>
