--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!--content section -->
         <section class="content_total">
             <div class="content">
-                <form class="header_search" action="">
+                <form class="header_search" action="" id="">
                     <div class="icons">
                         <button class="btn">
                             <img src="./images/search (1).png" alt="Search" class="btn-icon btn-icon-alt">
@@ -231,7 +231,6 @@
                                 <img src="./images/star.png" alt="">
                                 <p>ICC.tv</p>
                             </div>
-                            
                         </div>
                         <div class="right">
                             <div>
@@ -270,9 +269,7 @@
                                 <p>The Final of the ICC U19 Men's Cricket World Cup is here! LIVE and FREE</p>
                                 <p>2:21 PM</p>
                             </div>
-                            
                         </div>
-
                     </div>
                 </div>
                 <div class="sidebar">
