--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="message_nav">
                         <div class="left">
                             <button class="dual_img">
-                                <img src="./images/unchecked.png" alt="">
+                                <input type="checkbox" id="" name="" value="">
                                 <img src="./images/down-arrow.png" alt="">
                             </button>
                             <button class="single_img">
@@ -152,12 +152,11 @@
                             <button>
                                 <p class="para">1-50 of 1500</p>
                             </button>
-                            <button class="single_img">
-                                <img src="./images/left-arrow.png" alt="">
+                            <button class="">
+                                <img class="single_img" src="./images/left-arrow.png" alt="">
+                                <img class="single_img" src="./images/right-arrow-angle.png" alt="">
                             </button>
-                            <button class="single_img">
-                                <img src="./images/right-arrow-angle.png" alt="">
-                            </button>
+
                             <button class="dual_img">
                                 <img class="wide_img" src="./images/split.png" alt="">
                                 <img src="./images/down-arrow.png" alt="">
@@ -185,7 +184,7 @@
                     <!-- message items -->
 
                     <div class="message_items">
-                        <div class="left">
+                        <!-- <div class="left">
                             <div class="icons">
                                 <img src="./images/unchecked.png" alt="">
                                 <img src="./images/star.png" alt="">
@@ -268,6 +267,123 @@
                             <div>
                                 <p>The Final of the ICC U19 Men's Cricket World Cup is here! LIVE and FREE</p>
                                 <p>2:21 PM</p>
+                            </div>
+                        </div> -->
+                        <div class="inbox">
+                            <div class="left">
+                                <div class="input"><input type="checkbox" name="" id=""></div>
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="mid">
+                                <p>Login alert for Facebook for Android</p>
+                            </div>
+                            <div class="right">
+                                <p>1:37 PM</p>
+                            </div>
+                        </div>
+                        <div class="inbox">
+                            <div class="left">
+                                <div class="input"><input type="checkbox" name="" id=""></div>
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="mid">
+                                <p>Login alert for Facebook for Android</p>
+                            </div>
+                            <div class="right">
+                                <p>1:37 PM</p>
+                            </div>
+                        </div>
+                        <div class="inbox">
+                            <div class="left">
+                                <div class="input"><input type="checkbox" name="" id=""></div>
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="mid">
+                                <p>Login alert for Facebook for Android</p>
+                            </div>
+                            <div class="right">
+                                <p>1:37 PM</p>
+                            </div>
+                        </div>
+                        <div class="inbox">
+                            <div class="left">
+                                <div class="input"><input type="checkbox" name="" id=""></div>
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="mid">
+                                <p>Login alert for Facebook for Android</p>
+                            </div>
+                            <div class="right">
+                                <p>1:37 PM</p>
+                            </div>
+                        </div>
+                        <div class="inbox">
+                            <div class="left">
+                                <div class="input"><input type="checkbox" name="" id=""></div>
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="mid">
+                                <p>Login alert for Facebook for Android</p>
+                            </div>
+                            <div class="right">
+                                <p>1:37 PM</p>
+                            </div>
+                        </div>
+                        <div class="inbox">
+                            <div class="left">
+                                <div class="input"><input type="checkbox" name="" id=""></div>
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="mid">
+                                <p>Login alert for Facebook for Android</p>
+                            </div>
+                            <div class="right">
+                                <p>1:37 PM</p>
+                            </div>
+                        </div>
+                        <div class="inbox">
+                            <div class="left">
+                                <div class="input"><input type="checkbox" name="" id=""></div>
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="mid">
+                                <p>Login alert for Facebook for Android</p>
+                            </div>
+                            <div class="right">
+                                <p>1:37 PM</p>
+                            </div>
+                        </div>
+                        <div class="inbox">
+                            <div class="left">
+                                <div class="input"><input type="checkbox" name="" id=""></div>
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="mid">
+                                <p>Login alert for Facebook for Android</p>
+                            </div>
+                            <div class="right">
+                                <p>1:37 PM</p>
+                            </div>
+                        </div>
+                        <div class="inbox">
+                            <div class="left">
+                                <div class="input"><input type="checkbox" name="" id=""></div>
+                                <img src="./images/star.png" alt="">
+                                <p>Facebook</p>
+                            </div>
+                            <div class="mid">
+                                <p>Login alert for Facebook for Android</p>
+                            </div>
+                            <div class="right">
+                                <p>1:37 PM</p>
                             </div>
                         </div>
                     </div>
